--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -21,16 +19,12 @@ jobs:
       - name: Build project
         run: npm run build
       - name: Upload production-ready build files
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: .
+          path: '.'
 
   deploy:
-    name: Deploy
     needs: build
-    permissions:
-      pages: write
-      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -39,10 +33,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
-          path: .
+          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-        # with:
-          # github_token: ${{ secrets.GITHUB_TOKEN }}
-          # publish_dir: ./dist
