--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
   deploy:
     needs: build
     permissions:
+      pages: write
       id-token: write
     environment:
       name: github-pages
